# Django-api-server

./: .gitignore  README.md  all_packages.txt  manage.py  pyproject.toml  requirements.in  requirements.txt
pic_to_ASCII/: apps.py  urls.py  views.py
pic_to_ASCII/templates/pic_to_ASCII/: index.html
staticfiles/: home.css
todo/: models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py
todo/static/: index.css
todo/templates/todo/: index.html
todo/templates/todo/partials/: todo_item.html
todo_site/: asgi.py  settings.py  urls.py  views.py  wsgi.py
todo_site/static/: home.css
todo_site/templates/todo_site/: home.html
weather/: admin.py  models.py  urls.py  views.py
weather/migrations/: 0001_initial.py  0002_essentialweatherreport.py
weather/static/: style.css
weather/templates/weather/: index.html  weather_snippet.html
weather/views/: views.py  views_static.py
