[project]
name = "django-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "django==5.2",
    "django-crispy-forms==2.4",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
]
